# b3th

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  tests.yml
b3th/: _compat.py  cli.py  commit_message.py  config.py  conflict_resolver.py  gh_api.py  git_utils.py  llm.py  pr_description.py  stats.py  summarizer.py
test/: test_cli_basic.py  test_cli_commit.py  test_config.py  test_git_utils.py
tests/: test_cli_basic.py  test_cli_edge.py  test_cli_more.py  test_cli_pr.py  test_cli_prdraft.py  test_cli_resolve.py  test_cli_sync.py  test_commit_message.py  test_compat.py  test_config.py  test_conflict_resolver.py  test_conflict_resolver_noconflicts.py  test_gh_api.py  test_git_utils.py  test_llm.py  test_llm_wrap.py  test_pr_description.py  test_stats.py  test_summarizer.py
