[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"

# Project metadata 
[tool.poetry]
name = "b3th"
version = "0.1.0"          
description = "CLI that auto-generates commit messages and GitHub PR descriptions"
authors = ["Bethvour bethvourc@gmail.com"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bethvourc/b3th"
repository = "https://github.com/bethvourc/b3th"
keywords = ["git", "cli", "commit", "pull-request", "ai", "groq"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/bethvourc/b3th/issues"
"Source"      = "https://github.com/bethvourc/b3th"

# Runtime dependencies
[tool.poetry.dependencies]
python = ">=3.9"
typer = "^0.12"
requests = "^2.32"
python-dotenv = "^1.0"

# Development / tooling dependencies 
[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
coverage = "^7.5"
black = "^24.4"
ruff = "^0.4"
pre-commit = "^3.7"

# CLI entry-point
[tool.poetry.scripts]
b3th = "b3th.cli:app"

# Black formatting settings 
[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pypackages__
)/
'''

# Ruff linting settings 
[tool.ruff]
line-length = 88
target-version = "py39"
select = ["E", "F", "B", "I", "UP", "S", "A", "C4"]
ignore = ["E501"]
exclude = ["build", "dist", ".venv"]

# Optional: upload to TestPyPI before PyPI
[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/legacy/"
priority = "supplemental" 
